Move spark out to speed up build

--- a/cli/src/main/scala-2.11/BUILD
+++ b/cli/src/main/scala-2.11/BUILD
@@ -8,11 +8,13 @@ scala_library(
         "extra/src/main/scala/coursier/extra:extra",
         "extra/src/main/scala-2.11/coursier/extra:native",
         ":util",
+        ":options"
     ],
     sources = globs(
         "coursier/cli/scaladex/*.scala",
         "coursier/cli/spark/*.scala",
         "coursier/cli/*.scala",
+        exclude=["coursier/cli/Options.scala"]
     ),
 )
 
@@ -25,6 +27,27 @@ scala_library(
     ],
     sources = globs("coursier/cli/util/*.scala"),
 )
+
+scala_library(
+    name = "options",
+    dependencies = [
+        "3rdparty/jvm:caseapp",
+        "cache/src/main/scala:cache",
+    ],
+    sources = globs("coursier/cli/options/*.scala"),
+)
+
+scala_library(
+    name = "spark",
+    dependencies = [
+        "cache/src/main/scala:cache",
+        ":options",
+        ":cli"
+    ],
+    sources = globs("coursier/cli/spark/*.scala"),
+)
+
+
 
 jvm_binary(
     name = "coursier-cli",
