--- a/pants.ini
+++ b/pants.ini
@@ -2,7 +2,7 @@
 local_artifact_cache: %(pants_bootstrapdir)s/artifact_cache
 
 [GLOBAL]
-pants_version: 1.2.1
+pants_version: 1.4.0rc1
 
 [cache]
 read_from: ["%(local_artifact_cache)s"]
