Update pants to 1.10.0

--- a/pants.ini
+++ b/pants.ini
@@ -2,7 +2,7 @@
 local_artifact_cache: %(pants_bootstrapdir)s/artifact_cache
 
 [GLOBAL]
-pants_version: 1.2.1
+pants_version: 1.10.0
 
 [cache]
 read_from: ["%(local_artifact_cache)s"]
@@ -11,9 +11,8 @@ write_to: ["%(local_artifact_cache)s"]
 [jvm]
 options: ['-Xmx4g', '-XX:MaxMetaspaceSize=256m']
 
-[scala-platform]
-version: custom
-suffix_version: 2.12
+[scala]
+version: 2.12
 
 [jvm-platform]
 default_platform: java8
@@ -22,9 +21,6 @@ platforms: {
     'java7': {'source': '7', 'target': '7', 'args': [] },
     'java8': {'source': '8', 'target': '8', 'args': [] },
   }
-
-[compile.scalafmt]
-skip: True
 
 [compile.zinc]
 jvm_options: [
@@ -37,3 +33,4 @@ jvm_options: [
 
 [test.junit]
 jvm_options = ['-Xmx2048m']
+
